--- a/index.html
+++ b/index.html
@@ -143,14 +143,13 @@
       text-align: center;
     }
 
-    /* Research items */
-    .research-item {
-      background: var(--light);
-      border-radius: 16px;
-      padding: 40px;
-      margin-bottom: 32px;
-      border: 1px solid var(--border);
-    }
+         /* Research items */
+     .research-item {
+       background: var(--light);
+       border-radius: 16px;
+       padding: 40px;
+       margin-bottom: 32px;
+     }
 
     .research-item h3 {
       font-size: 28px;
@@ -348,37 +347,37 @@
     <section class="section" id="research">
       <h2 class="section-title">Research</h2>
       
-      <div class="research-item">
-        <h3>Upper Bounding Unit Distance Graphs</h3>
-        <div class="research-meta">Keywords: beam search; unit distance graphs; exploitation–exploration; planar geometry; combinatorial optimization</div>
-        <p>What is the maximum number of edges u(n) that a unit distance graph (UDG) of n vertices can have, as asked by an unsolved problem of Paul Erdős? We address the problem of determining the maximum number of edges in a UDG of n vertices using computer search. We seek to demonstrate a computer algorithm to generate dense UDGs for vertex counts up to at least 100.</p>
-        <ul class="features">
-          <li>Designed a novel heuristic beam search algorithm to improve the maximum number of edges in unit distance graphs</li>
-          <li>Explored graph constructions from the Moser Lattice with heuristic generating rules like rotation, translation, and reflection</li>
-          <li>Used multiprocessor and GPU implementations to optimize the efficiency of the search algorithms</li>
-        </ul>
-        <p class="skills"><strong>Skills:</strong> Python, NumPy, Matplotlib, Pandas, Scikit-learn, Multiprocessing</p>
-        <div class="actions">
-          <a class="btn primary" href="#">View Paper</a>
-          <a class="btn" href="#">Code & Database</a>
-        </div>
-      </div>
+             <div class="research-item">
+         <h3>Research Project Title 1</h3>
+         <div class="research-meta">Keywords: placeholder keywords</div>
+         <p>Research description placeholder - we will update this with your actual research content later.</p>
+         <ul class="features">
+           <li>Key contribution or finding 1</li>
+           <li>Key contribution or finding 2</li>
+           <li>Key contribution or finding 3</li>
+         </ul>
+         <p class="skills"><strong>Skills:</strong> Skills placeholder</p>
+         <div class="actions">
+           <a class="btn primary" href="#">View Paper</a>
+           <a class="btn" href="#">Code</a>
+         </div>
+       </div>
 
-      <div class="research-item">
-        <h3>Laplacian Eigenmaps and Chebyshev Polynomials</h3>
-        <div class="research-meta">Subjects: probability; metric geometry; statistics theory</div>
-        <p>Eigenmaps are important in analysis, geometry, and machine learning, particularly in nonlinear dimension reduction. This project investigates the relationship between eigen-coordinates of graph Laplacians and Chebyshev polynomials.</p>
-        <ul class="features">
-          <li>Studied eigenmaps of Laplacian matrices transforming high-dimensional data into graph representations</li>
-          <li>Used NumPy and Matplotlib to visualize the eigenmaps</li>
-          <li>Explored the properties of eigenmaps, including data distribution, manifold smoothness, and boundary conditions</li>
-        </ul>
-        <p class="skills"><strong>Skills:</strong> Python, MATLAB, NumPy</p>
-        <div class="actions">
-          <a class="btn primary" href="#">View Paper</a>
-          <a class="btn" href="#">Demo</a>
-        </div>
-      </div>
+       <div class="research-item">
+         <h3>Research Project Title 2</h3>
+         <div class="research-meta">Keywords: placeholder keywords</div>
+         <p>Research description placeholder - we will update this with your actual research content later.</p>
+         <ul class="features">
+           <li>Key contribution or finding 1</li>
+           <li>Key contribution or finding 2</li>
+           <li>Key contribution or finding 3</li>
+         </ul>
+         <p class="skills"><strong>Skills:</strong> Skills placeholder</p>
+         <div class="actions">
+           <a class="btn primary" href="#">View Paper</a>
+           <a class="btn" href="#">Demo</a>
+         </div>
+       </div>
     </section>
 
     <section class="section" id="projects">
