--- a/index.html
+++ b/index.html
@@ -471,16 +471,16 @@
 
                         <div class="row gallery-4">
                             <div class="col-8 col-12-small">
-                                <a class="image fit"><img src="images/poster1.1.png" loading="lazy" alt="Poster main - accessible LLM research" /></a>
+                                <a class="image fit"><img src="images/Poster1.1.png" loading="lazy" alt="accessible LLM research" /></a>
                             </div>
                             <div class="col-4 col-12-small">
-                                <a class="image fit"><img src="images/poster1.2.png" loading="lazy" alt="Poster detail 1" /></a>
+                                <a class="image fit"><img src="images/Poster1.2.png" loading="lazy" alt="detail 1" /></a>
                             </div>
                             <div class="col-4 col-12-small">
-                                <a class="image fit"><img src="images/poster1.3.png" loading="lazy" alt="Poster detail 2" /></a>
+                                <a class="image fit"><img src="images/Poster1.3.png" loading="lazy" alt="detail 2" /></a>
                             </div>
                             <div class="col-4 col-12-small">
-                                <a class="image fit"><img src="images/poster1.4.png" loading="lazy" alt="Poster detail 3" /></a>
+                                <a class="image fit"><img src="images/Poster1.4.png" loading="lazy" alt="detail 3" /></a>
                             </div>
                         </div>
                     </div>
