--- a/index.html
+++ b/index.html
@@ -207,13 +207,11 @@
             transition: transform 0.3s ease;
         }
 
-        /* 4-up gallery with larger primary image */
+        /* 4-up gallery unified sizing */
         .gallery-4 { margin-top: 16px; }
-        .gallery-4 .col-8 { margin-bottom: 12px; }
-        .gallery-4 .col-8 img { max-height: 360px; object-fit: contain; background:#fff; border:1px solid #e9ecef; padding:6px; border-radius:10px; }
-        .gallery-4 .col-4 { margin-bottom: 12px; }
-        .gallery-4 .col-4 img { max-height: 160px; object-fit: contain; background:#fff; border:1px solid #e9ecef; padding:6px; border-radius:10px; }
-        .poster-vr { max-height: 360px; width:100%; object-fit: contain; background:#fff; border:1px solid #e9ecef; padding:6px; border-radius:10px; }
+        .gallery-4 > div { flex: 0 0 25%; max-width: 25%; margin-bottom: 12px; }
+        .gallery-4 img { width: 100%; height: 220px; object-fit: contain; background:#fff; border:1px solid #e9ecef; padding:6px; border-radius:10px; }
+        .poster-vr { max-height: 400px; width:100%; object-fit: contain; background:#fff; border:1px solid #e9ecef; padding:6px; border-radius:10px; }
 
         .image.fit img:hover {
             transform: translateY(-5px);
