--- a/hobbies.html
+++ b/hobbies.html
@@ -10,20 +10,20 @@
         #header{background:linear-gradient(135deg,#667eea 0%, #764ba2 100%);color:#fff;text-align:center;padding:64px 0}
         #header h1{margin:0;font-size:2.8rem;letter-spacing:.06em}
         #nav{background:#fff;border-bottom:1px solid #e9ecef;position:sticky;top:0;z-index:10}
-        .nav{max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;padding:0 24px}
+        .nav{max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:center;padding:0 24px}
         .links{display:flex;list-style:none;gap:8px;margin:0;padding:0}
         .links a{display:block;padding:18px 18px;text-decoration:none;color:#333;border-bottom:3px solid transparent}
         .links a:hover,.links .active a{color:#667eea;border-bottom-color:#667eea}
-        #main{padding:0 24px 48px}
-        .row{display:flex;flex-wrap:wrap;margin:0 -12px}
+        #main{padding:0 24px 64px;display:flex;flex-direction:column;align-items:center}
+        .row{display:flex;flex-wrap:wrap;justify-content:center;margin:0 -12px}
         [class*="col-"]{padding:0 12px}
         .col-6{flex:0 0 50%;max-width:50%}
         .col-12{flex:0 0 100%;max-width:100%}
         .col-3{flex:0 0 25%;max-width:25%}
         @media (max-width:768px){.col-6,.col-3{flex:0 0 100%;max-width:100%}}
         .image.fit img{width:100%;height:auto;border-radius:10px;box-shadow:0 5px 20px rgba(0,0,0,.08)}
-        h2{margin:28px 0 10px}
-        p{margin:0 0 16px}
+        h2{margin:28px 0 10px;text-align:center}
+        p{margin:0 0 16px;text-align:center;max-width:800px}
         footer{background:#1a252f;color:#7f8c8d;text-align:center;padding:16px}
     </style>
 </head>
